--- a/hw6/hw6.ipynb
+++ b/hw6/hw6.ipynb
@@ -40,6 +40,8 @@
     "import random\n",
     "import pyransac3d as pyrsc\n",
     "\n",
+    "#HW6: Detect & visualize an object from 3D point cloud by eliminating the environment, and estimate the distance to the object (the minimal depth measurement)\n",
+    "\n",
     "# Depth camera calibration\n",
     "FX_DEPTH = 211.348495\n",
     "FY_DEPTH = 211.348495\n",
